--- a/SA.MVC/Views/Admins/Index.cshtml
+++ b/SA.MVC/Views/Admins/Index.cshtml
@@ -1,26 +1,36 @@
-﻿@{
+﻿@model bool
+@{
     ViewData["Title"] = "Home Page";
     Layout = "_LayoutAdmin";
 
 }
 
-<div class="row w-75 h-50 mx-auto mt-5">
-    <div class="col-md">
-        <div class="card text-center border-0 shadow">
-            <div class="card-header bg-white">
-                Pokretanje sustava
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">Pokrenite algoritam</h5>
-                <p class="card-text">Pokretanje algoritma zaustaviti će sve <strong>radnje</strong> sustava sve dok se algoritam ne izvrši.</p>
-                <a href="#" class="btn btn-danger" onclick="StartProcess()">Započnite dodjelu</a>
-            </div>
-            <div class="card-footer text-muted bg-white">
-                <strong>Upozorenje:</strong> jednom kada se algoritam pokrene, <span class="text-danger" style="font-weight:600;">neće</span> se moći zaustaviti.
+@if (Model)
+{
+    <h1>patkica</h1>
+}
+else
+{
+    <h1>patkica2</h1>
+
+    <div class="row w-75 h-50 mx-auto mt-5">
+        <div class="col-md">
+            <div class="card text-center border-0 shadow">
+                <div class="card-header bg-white">
+                    Pokretanje sustava
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Pokrenite algoritam</h5>
+                    <p class="card-text">Pokretanje algoritma zaustaviti će sve <strong>radnje</strong> sustava sve dok se algoritam ne izvrši.</p>
+                    <a href="#" class="btn btn-danger" onclick="StartProcess()">Započnite dodjelu</a>
+                </div>
+                <div class="card-footer text-muted bg-white">
+                    <strong>Upozorenje:</strong> jednom kada se algoritam pokrene, <span class="text-danger" style="font-weight:600;">neće</span> se moći zaustaviti.
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
 
 
 @section Scripts
