--- a/SA.MVC/Views/Admins/Index.cshtml
+++ b/SA.MVC/Views/Admins/Index.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-@if (Model)
+@if (!Model)
 {
     <h1>patkica</h1>
 }
@@ -22,7 +22,9 @@ else
                 <div class="card-body">
                     <h5 class="card-title">Pokrenite algoritam</h5>
                     <p class="card-text">Pokretanje algoritma zaustaviti će sve <strong>radnje</strong> sustava sve dok se algoritam ne izvrši.</p>
-                    <a href="#" class="btn btn-danger" onclick="StartProcess()">Započnite dodjelu</a>
+                    @*<a href="#" class="btn btn-danger" onclick="StartProcess()">Započnite dodjelu</a>*@
+                    <a asp-action="GetAllStudentsAlgorithmInfo" asp-controller="Admins" class="btn btn-danger">Započnite dodjelu</a>
+
                 </div>
                 <div class="card-footer text-muted bg-white">
                     <strong>Upozorenje:</strong> jednom kada se algoritam pokrene, <span class="text-danger" style="font-weight:600;">neće</span> se moći zaustaviti.
