--- a/SA.MVC/Views/Admins/Index.cshtml
+++ b/SA.MVC/Views/Admins/Index.cshtml
@@ -7,12 +7,26 @@
 
 @if (Model)
 {
-    <h1>patkica</h1>
+    <div class="row w-75 h-50 mx-auto mt-5">
+        <div class="col-md">
+            <div class="card text-center border-0 shadow">
+                <div class="card-header bg-white">
+                    Rezultati
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Sustav je završio obradu</h5>
+                    <p class="card-text">Algoritam je završio sa obradom, studenti koji <strong>nisu</strong> raspoređeni od strane sustava, moraju biti raspoređeni od strane admina.</p>
+                    <a asp-action="Unsorted" asp-controller="Admins" class="btn btn-info">Pregled neraspoređenih studenata</a>
+                </div>
+                <div class="card-footer text-muted bg-white">
+                    <strong>Obavijest:</strong> trenutno je ostalo neraspođeno <span class="text-danger" id="unAssignStudents" style="font-weight:600;"></span> studenata.
+                </div>
+            </div>
+        </div>
+    </div>
 }
 else
 {
-    <h1>patkica2</h1>
-
     <div class="row w-75 h-50 mx-auto mt-5">
         <div class="col-md">
             <div class="card text-center border-0 shadow">
@@ -40,6 +54,26 @@ else
     <script type="text/javascript">
 
         $(document).ready(function () {
+
+            CountUnassignedStudents();
+
+            function CountUnassignedStudents() {
+                      $.ajax({
+                            url: '@Url.Action("CountUnassignedStudents", "Admins")',
+                            type: "GET",
+                            success: function (resp) {
+                                console.log(resp);
+                                $("#unAssignStudents").html(resp);
+                            },
+                            error: function (err) {
+                                Swal.fire({
+                                    icon: 'error',
+                                    title: 'Greška...',
+                                    text: 'Nije moguće dohvatiti broj neraspoređenih studenata.',
+                                })
+                            }
+                           });
+            }
 
             $("#assignStudents").click(function () {
             Swal.fire({
