--- a/SA.MVC/Views/Admins/Index.cshtml
+++ b/SA.MVC/Views/Admins/Index.cshtml
@@ -16,7 +16,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Sustav je završio obradu</h5>
                     <p class="card-text">Algoritam je završio sa obradom, studenti koji <strong>nisu</strong> raspoređeni od strane sustava, moraju biti raspoređeni od strane admina.</p>
-                    <a asp-action="Unsorted" asp-controller="Admins" class="btn btn-info">Pregled neraspoređenih studenata</a>
+                    <a asp-action="Unassigned" asp-controller="Admins" class="btn btn-info">Pregled neraspoređenih studenata</a>
                 </div>
                 <div class="card-footer text-muted bg-white">
                     <strong>Obavijest:</strong> trenutno je ostalo neraspođeno <span class="text-danger" id="unAssignStudents" style="font-weight:600;"></span> studenata.
