--- a/SA.MVC/Views/Admins/Unassigned.cshtml
+++ b/SA.MVC/Views/Admins/Unassigned.cshtml
@@ -136,7 +136,7 @@
                         $.each(result, function (idx, val) {
                             var footer = document.createElement("footer");
                             footer.className = "blockquote-footer";
-                            footer.textContent = val.comment + ', ' + val.points + ' bodova;
+                            footer.textContent = val.comment + ', ' + val.points + ' bodova';
 
                             var liElement = document.createElement("li");
                             liElement.className = "list-group-item border-0";
