--- a/SA.MVC/Views/Students/MyResults.cshtml
+++ b/SA.MVC/Views/Students/MyResults.cshtml
@@ -62,7 +62,7 @@
                             <p class="card-text">
                                 Izračun bodova određuje se prema idućoj formuli: <strong class="text-danger">BrojGodinaStudiranja * Prosjek</strong> gdje se
                                 BrojGodinaStudiranja množi sa 1 ukoliko student nije produljio akademsku godinu, potom 0.8 za jednu produljenu godinu,
-                                0.6 za dvije produljenje godine te 0.4 za tri produljenje godine.
+                                0.6 za dvije produljenje godine te 0.4 za tri produljene godine.
                             </p>
                         </div>
                     </div>
